--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -67,6 +67,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #phoneNumber></ion-input>
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>        
       </ion-item>
       <ion-item>
         <ion-label stacked>Town</ion-label>
@@ -129,7 +130,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #emergencyContactPhoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactPhoneNumber.value"></ion-icon>
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <button type="submit" ion-button color="secondary">Create</button>
       <button ion-button type="button" color="danger" (click)="
@@ -148,6 +149,8 @@
       emergencyContactName.value = '';
       emergencyRelationship.value = '';
       emergencyContactPhoneNumber.value = '';
+      picture = '';
+      gender = 'male';
       ">
         Reset
       </button>
