--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -70,6 +70,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input [value]="student.phoneNumber" type="text" #phoneNumber></ion-input>
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>                
       </ion-item>
       <ion-item>
         <ion-label stacked>Town</ion-label>
@@ -132,7 +133,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input [value]="student.emergencyContactPhoneNumber" type="text" #emergencyContactPhoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactPhoneNumber.value"></ion-icon>
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
         <ion-label>is Active?</ion-label>
