--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Create</ion-title>
+    <ion-title>Create Record</ion-title>
   </ion-navbar>
 
 </ion-header>
