--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Edit</ion-title>
+    <ion-title>Edit Record</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -136,7 +136,7 @@
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-label>is Active?</ion-label>
+        <ion-label>is Student active?</ion-label>
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
       <button type="submit" ion-button block color="secondary">Edit</button>
