--- a/src/pages/student-list/student-list.html
+++ b/src/pages/student-list/student-list.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the MainPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Active Roster</ion-title>
+    <ion-title>Roster</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCreate()">
         Add
@@ -27,8 +21,8 @@
     </ion-select>
   </ion-item>
   <ion-list *ngIf="students">
-    <ion-item-sliding *ngFor="let data of students">
-      <ion-item (click)="goToStudentProfile(data.student.id)">
+    <ion-item-sliding>
+      <ion-item (click)="goToStudentProfile(data.student.id)" *ngFor="let data of students">
         <ion-avatar item-left>
           <img src="{{data.student.picture}}" alt="no image">
         </ion-avatar>
@@ -46,14 +40,6 @@
         <p>
           <span>State: </span>{{data.student.state}}</p>
       </ion-item>
-      <ion-item-options>
-        <button ion-button color="secondary" (click)="addAttendance({id: data.student.id})">
-          Attended
-        </button>
-        <button ion-button color="danger" (click)="addAbsence({id: data.student.id})">
-          Absent
-        </button>
-      </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 </ion-content>
