--- a/src/pages/table/table.html
+++ b/src/pages/table/table.html
@@ -1,12 +1,7 @@
-<!--
-  Generated template for the TablePage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Records</ion-title>
   </ion-navbar>
 
@@ -16,7 +11,7 @@
 <ion-content padding>
   <ion-item>
     <ion-label>Query by: </ion-label>
-    <ion-select [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
+    <ion-select (ionCancel)="initializeStudents()" [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
       <ion-option  *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
     </ion-select>
   </ion-item>
@@ -34,6 +29,7 @@
     </ion-select>
   </ion-item>
 </div>
+<div id="table">
   <table>
     <caption [ngSwitch]="query">
       <ng-template ngSwitchWhen="Date">Students attendance in {{months[currentDate.getMonth()]}}, {{currentDate.getFullYear()}}</ng-template>
@@ -70,4 +66,5 @@
       </td>
     </tr>
   </table>
+</div>
 </ion-content>
