--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
+  <div *ngIf="picture != ''" class="profile-image">
+    <img src="{{picture}}">
+  </div>
   <form #studentForm="ngForm" (ngSubmit)="createStudent({
       firstName: firstName.value,
       initial: initial.value,
@@ -33,7 +36,7 @@
     })">
     <!-- Picture will be taken from gallery or camera.  If the input is empty a default one will
        be chosen from based by gender. -->
-    <ion-list>
+    <ion-item-group>
       <ion-item>
         <ion-label stacked>Picture</ion-label>
         <ion-input type="text" readonly="true" name="picture" [(ngModel)]="picture"></ion-input>
@@ -67,7 +70,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #phoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>        
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
         <ion-label stacked>Town</ion-label>
@@ -154,6 +157,6 @@
       ">
         Reset
       </button>
-    </ion-list>
+    </ion-item-group>
   </form>
 </ion-content>
