--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -27,30 +27,45 @@
     </ion-select>
   </ion-item>
   <ion-list *ngIf="students">
-    <ion-item-sliding *ngFor="let data of students">
-      <ion-item (click)="goToStudentProfile(data.student.id)">
+    <ion-item-sliding *ngFor="let student of students">
+      <ion-item (click)="goToStudentProfile(student.id)">
         <ion-avatar item-left>
-          <img src="{{data.student.picture}}" alt="no image">
+          <img src="{{student.picture}}" alt="no image">
         </ion-avatar>
-        <p>
-          <span>ID: </span>{{data.student.id}}</p>
-        <p>
-          <span>Name: </span>{{data.student.firstName}} {{data.student.lastName}}</p>
-        <p *ngIf="data.student.phoneNumber">
-          <span>Phone Number: </span>{{data.student.phoneNumber}}
-        </p>
-        <p>
-          <span>Address: </span>{{data.student.address}}</p>
-        <p>
-          <span>Town: </span>{{data.student.town}}</p>
-        <p>
-          <span>State: </span>{{data.student.state}}</p>
+        <div class="amaranthus">
+          <p>
+            <span class="label name">Name: </span>
+            <span class="name">{{student.firstName}} {{student.lastName}}</span>
+          </p>
+          <p>
+            <span class="label">ID: </span>{{student.id}}
+          </p>
+          <div *ngIf="student.phoneNumber">
+            <p>
+              <span class="label">Phone Number: </span>{{student.phoneNumber}}
+            </p>
+          </div>
+          <p>
+            <span class="label">Address: </span>{{student.address}}
+          </p>
+          <p>
+            <span class="label">Town: </span>{{student.town}}
+          </p>
+          <div>
+            <p class="left">
+              <label class="label">State: </label>{{student.state}}
+            </p>
+            <p class="right">
+              Swipe for more options
+            </p>
+          </div>
+        </div>
       </ion-item>
       <ion-item-options>
-        <button ion-button color="secondary" (click)="addAttendance({id: data.student.id})">
+        <button ion-button color="secondary" (click)="addAttendance({id: student.id})">
           Attended
         </button>
-        <button ion-button color="danger" (click)="addAbsence({id: data.student.id})">
+        <button ion-button color="danger" (click)="addAbsence({id: student.id})">
           Absent
         </button>
       </ion-item-options>
