--- a/src/pages/student-list/student-list.html
+++ b/src/pages/student-list/student-list.html
@@ -35,7 +35,7 @@
             </p>
             <div *ngIf="student.phoneNumber">
               <p>
-                <span class="label">Phone Number: </span>{{student.phoneNumber}}
+                <span class="label">Phone Number: </span>{{student.phoneNumber | phonenumber}}
               </p>
             </div>
             <p>
