--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -41,11 +41,11 @@
         <ion-label stacked>Picture</ion-label>
         <ion-input type="text" readonly="true" name="picture" [(ngModel)]="picture"></ion-input>
       </ion-item>
-      <button (click)="browsePicture()" type="button" ion-button color="secondary">Browse</button>
-      <button (click)="picture = ''" type="button" ion-button color="danger">Reset</button>
+      <button (click)="browsePicture()" type="button" ion-button color="primary">Browse</button>
+      <button (click)="picture = ''" type="button" ion-button color="secondary">Reset</button>
       <ion-item>
         <ion-label stacked>ID</ion-label>
-        <ion-input type="text" #id></ion-input>
+        <ion-input type="text" #id value="{{idInput}}"></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!id.value"></ion-icon>
       </ion-item>
       <ion-item>
@@ -69,7 +69,7 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
-        <ion-input type="text" #phoneNumber></ion-input>
+        <ion-input type="text" #phoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
@@ -132,11 +132,11 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
-        <ion-input type="text" #emergencyContactPhoneNumber></ion-input>
+        <ion-input type="text" #emergencyContactPhoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
-      <button type="submit" ion-button color="secondary">Create</button>
-      <button ion-button type="button" color="danger" (click)="
+      <button type="submit" ion-button color="primary">Create</button>
+      <button ion-button type="button" color="secondary" (click)="
       firstName.value = '';
       initial.value = '';
       lastName.value = '';
