--- a/src/pages/table/table.html
+++ b/src/pages/table/table.html
@@ -1,4 +1,3 @@
-
 <ion-header>
 
   <ion-navbar color="primary">
@@ -12,11 +11,11 @@
   <ion-item>
     <ion-label>Query by: </ion-label>
     <ion-select (ionCancel)="initializeStudents()" [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
-      <ion-option  *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
+      <ion-option *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
     </ion-select>
   </ion-item>
   <div *ngIf="query == 'Date'">
-  <ion-item>
+    <ion-item>
     <ion-label>Year</ion-label>
     <ion-select [(ngModel)]="yearQuery" multiple="false" >
       <ion-option *ngFor="let year of years" value="{{year}}" (ionSelect)="queryDataByYear(year)">{{year}}</ion-option>
@@ -28,43 +27,47 @@
       <ion-option *ngFor="let month of months; let i = index" value="{{month}}" (ionSelect)="queryDataByMonth(i)">{{month}}</ion-option>
     </ion-select>
   </ion-item>
-</div>
-<div id="table">
-  <table>
-    <caption [ngSwitch]="query">
-      <ng-template ngSwitchWhen="Date">Students attendance in {{months[currentDate.getMonth()]}}, {{currentDate.getFullYear()}}</ng-template>
-      <ng-template ngSwitchDefault>Students attendance in {{monthQuery}}, {{yearQuery}}</ng-template>
-        </caption>
-    <!-- <caption *ngIf="query != 'Date'">Students attendance in {{months[currentDate.getMonth()]}}, {{currentDate.getFullYear()}}</caption>
+    <!-- <ion-item>
+      <ion-label>Date</ion-label>
+      <ion-datetime displayFormat="M YYYY" [(ngModel)]="dateQuery"></ion-datetime>
+    </ion-item> -->
+  </div>
+  <div id="table">
+    <table>
+      <caption [ngSwitch]="query">
+        <ng-template ngSwitchWhen="Date">Students attendance in {{months[currentDate.getMonth()]}}, {{currentDate.getFullYear()}}</ng-template>
+        <ng-template ngSwitchDefault>Students attendance in {{monthQuery}}, {{yearQuery}}</ng-template>
+      </caption>
+      <!-- <caption *ngIf="query != 'Date'">Students attendance in {{months[currentDate.getMonth()]}}, {{currentDate.getFullYear()}}</caption>
     <caption *ngIf="query == 'Date'">Students attendance in {{monthQuery}}, {{yearQuery}}</caption>     -->
-    <tr>
-      <th>
-        Id
-      </th>
-      <th>
-        Name
-      </th>
-      <th>
-        Attendance
-      </th>
-      <th>
-        Absence
-      </th>
-    </tr>
-    <tr *ngFor="let student of students">
-      <td>
-        {{student.id}}
-      </td>
-      <td>
-        {{student.name}}
-      </td>
-      <td>
-        {{student.attendance}}
-      </td>
-      <td>
-        {{student.absence}}
-      </td>
-    </tr>
-  </table>
-</div>
+      <tr>
+        <th>
+          Id
+        </th>
+        <th>
+          Name
+        </th>
+        <th>
+          Attendance
+        </th>
+        <th>
+          Absence
+        </th>
+      </tr>
+      <tr *ngFor="let student of students">
+        <td>
+          {{student.id}}
+        </td>
+        <td>
+          {{student.name}}
+        </td>
+        <td>
+          {{student.attendance}}
+        </td>
+        <td>
+          {{student.absence}}
+        </td>
+      </tr>
+    </table>
+  </div>
 </ion-content>
