--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -136,7 +136,7 @@
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-label>is Student active?</ion-label>
+        <ion-label>is the person active?</ion-label>
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
       <button type="submit" ion-button block color="primary">Edit</button>
