--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -101,39 +101,39 @@
       <ion-item>
         <ion-label stacked>First Name</ion-label>
         <ion-input type="text" #fatherFirstName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherFirstName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherFirstName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Last Name</ion-label>
         <ion-input type="text" #fatherLastName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherLastName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherLastName.value"></ion-icon> -->
       </ion-item>
       <h6>Mother</h6>
       <ion-item>
         <ion-label stacked>First Name</ion-label>
         <ion-input type="text" #motherFirstName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherFirstName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherFirstName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Last Name</ion-label>
         <ion-input type="text" #motherLastName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherLastName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherLastName.value"></ion-icon> -->
       </ion-item>
       <h6>Emergency Contact</h6>
       <ion-item>
         <ion-label stacked>Name</ion-label>
         <ion-input type="text" #emergencyContactName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Relationship</ion-label>
         <ion-input type="text" #emergencyRelationship></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyRelationship.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyRelationship.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #emergencyContactPhoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon> -->
       </ion-item>
       <button type="submit" ion-button color="primary">Create</button>
       <button ion-button type="button" color="secondary" (click)="
