--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -101,34 +101,34 @@
       <ion-item>
         <ion-label stacked>First Name</ion-label>
         <ion-input [value]="student.fatherFirstName" type="text" #fatherFirstName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherFirstName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherFirstName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Last Name</ion-label>
         <ion-input [value]="student.fatherLastName" type="text" #fatherLastName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherLastName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!fatherLastName.value"></ion-icon> -->
       </ion-item>
       <h6>Mother</h6>
       <ion-item>
         <ion-label stacked>First Name</ion-label>
         <ion-input [value]="student.motherFirstName" type="text" #motherFirstName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherFirstName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherFirstName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Last Name</ion-label>
         <ion-input [value]="student.motherLastName" type="text" #motherLastName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherLastName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!motherLastName.value"></ion-icon> -->
       </ion-item>
       <h6>Emergency Contact</h6>
       <ion-item>
         <ion-label stacked>Name</ion-label>
         <ion-input [value]="student.emergencyContactName" type="text" #emergencyContactName></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactName.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyContactName.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Relationship</ion-label>
         <ion-input [value]="student.emergencyRelationship" type="text" #emergencyRelationship></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyRelationship.value"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="!emergencyRelationship.value"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
@@ -136,7 +136,7 @@
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-label>is the person active?</ion-label>
+        <ion-label>Is {{student.firstName}} {{student.lastName}} active?</ion-label>
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
       <button type="submit" ion-button block color="primary">Edit</button>
