--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -31,7 +31,7 @@
       <p class="text bold" *ngIf="student.phoneNumber">
         <span class="text label">Phone Number: </span>{{student.phoneNumber | phonenumber}}</p>
       <p class="text bold">
-        <span class="text label">Town: </span>{{student.town}}</p>
+        <span class="text label">City: </span>{{student.town}}</p>
       <p class="text bold">
         <span class="text label">State: </span>{{student.state}}</p>
       <p class="text bold">
