--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -73,7 +73,7 @@
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-label stacked>Town</ion-label>
+        <ion-label stacked>City</ion-label>
         <ion-input type="text" #town></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!town.value"></ion-icon>
       </ion-item>
