--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -133,7 +133,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input type="text" #emergencyContactPhoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
-        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon> -->
+        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
       </ion-item>
       <button type="submit" ion-button color="primary">Create</button>
       <button ion-button type="button" color="secondary" (click)="
