--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Active Roster</ion-title>
+    <ion-title>Main</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goToCreate()">
         Add
