--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -69,7 +69,7 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
-        <ion-input type="text" #phoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
+        <ion-input type="text" #phoneNumber></ion-input>
         <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(phoneNumber.value)"></ion-icon>
       </ion-item>
       <ion-item>
@@ -132,8 +132,8 @@
       </ion-item>
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
-        <ion-input type="text" #emergencyContactPhoneNumber placeholder="xxx-xxx-xxxx"></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
+        <ion-input type="text" #emergencyContactPhoneNumber></ion-input>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon> -->
       </ion-item>
       <button type="submit" ion-button color="primary">Create</button>
       <button ion-button type="button" color="secondary" (click)="
