--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -133,7 +133,7 @@
       <ion-item>
         <ion-label stacked>Phone Number</ion-label>
         <ion-input [value]="student.emergencyContactPhoneNumber" type="text" #emergencyContactPhoneNumber></ion-input>
-        <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon>
+        <!-- <ion-icon id="form-icon" item-right name="warning" *ngIf="validatePhoneNumber(emergencyContactPhoneNumber.value)"></ion-icon> -->
       </ion-item>
       <ion-item>
         <ion-label>Is {{student.firstName}} {{student.lastName}} active?</ion-label>
