--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -29,7 +29,7 @@
       <p class="text bold">
         <span class="text label">Address: </span>{{student.address}}</p>
       <p class="text bold" *ngIf="student.phoneNumber">
-        <span class="text label">Phone Number: </span>{{student.phoneNumber | phonenumber}}</p>
+        <span class="text label">Phone Number: </span>{{student.phoneNumber}}</p>
       <p class="text bold">
         <span class="text label">City: </span>{{student.town}}</p>
       <p class="text bold">
@@ -45,7 +45,7 @@
       <p class="text bold">
         <span class="text label">Emergency Contact's Relationship: </span>{{student.emergencyRelationship}}</p>
       <p class="text bold">
-        <span class="text label">Emergency Contact's Phone Number: </span>{{student.emergencyContactPhoneNumber | phonenumber}}</p>
+        <span class="text label">Emergency Contact's Phone Number: </span>{{student.emergencyContactPhoneNumber}}</p>
       <div class="text bold">
         <p *ngIf="student.isActive == true">
           *Student is currently active on the roster.*
