--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -6,13 +6,24 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>settings</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+<ion-list >
+  <ion-item *ngFor="let product of products">
+    {{product.title}}
+    {{product.description}}
+    <button *ngIf="product.canPurchase || !product.owned"  (click)="purchaseProduct(product)">
+      Buy @ {{product.price}}
+    </button>
+    <div *ngIf="product.owned">
+      Product already owned! Thank you for your patronage!
+    </div>
+  </ion-item>
+</ion-list>
 </ion-content>
