--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,16 +14,9 @@
 
 
 <ion-content padding>
-<ion-list >
-  <ion-item *ngFor="let product of products">
-    {{product.title}}
-    {{product.description}}
-    <button *ngIf="product.canPurchase || !product.owned"  (click)="purchaseProduct(product)">
-      Buy @ {{product.price}}
-    </button>
-    <div *ngIf="product.owned">
-      Product already owned! Thank you for your patronage!
-    </div>
-  </ion-item>
-</ion-list>
+  <button ion-button color="primary" (click)="exportFile()">Export File</button>
+  <a href="" download="attendancelog.csv"></a>
+  <form method="get" action="t.txt">
+    <button ion-button color="secondary" type="submit">Download!</button>
+  </form>
 </ion-content>
