--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
+  
 <ion-header>
 
   <ion-navbar color="primary">
@@ -14,9 +9,5 @@
 
 
 <ion-content padding>
-  <button ion-button color="primary" (click)="exportFile()">Export File</button>
-  <a href="" download="attendancelog.csv"></a>
-  <form method="get" action="t.txt">
-    <button ion-button color="secondary" type="submit">Download!</button>
-  </form>
+  <button ion-button color="primary" (click)="exportFileToDropbox()">Export File to Dropbox</button>
 </ion-content>
