add in app-browser

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,4 +1,3 @@
-  
 <ion-header>
 
   <ion-navbar color="primary">
@@ -9,5 +8,7 @@
 
 
 <ion-content padding>
+  <button ion-button color="primary" (click)="exportToFile()">Export to File</button>
   <button ion-button color="primary" (click)="exportFileToDropbox()">Export File to Dropbox</button>
+  <a [href]="href" download>download</a>
 </ion-content>
